--- a/css/screen.css
+++ b/css/screen.css
@@ -8,7 +8,7 @@ html {
   font-size: 16px;
   line-height: 1.5;
   font-family: "Helvetica Neue", Helvetica, arial, sans-serif;
-  color: #111;
+  color: Khaki;
   padding: 24px 24px 0;
 }
 
